# img4tool

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  ReadMe.md  autogen.sh  configure.ac  libimg4tool.pc.in  setBuildVersion.sh
.github/workflows/: main.yml
img4tool/: ASN1DERElement.cpp  ASN1DERElement.hpp  Makefile.am  all.h  all_img4tool.h  iboot-img4-info.txt  img4.c  img4.h  img4tool.c  img4tool.cpp  img4tool.h  img4tool.hpp  lzssdec.c  lzssdec.h  main.c  main.cpp  privateAppleTags.txt
img4tool.xcodeproj/: project.pbxproj
img4tool.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
img4tool.xcodeproj/project.xcworkspace/xcuserdata/s0uthwest.xcuserdatad/: UserInterfaceState.xcuserstate
img4tool.xcodeproj/xcuserdata/s0uthwest.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: Makefile.am
include/img4tool/: ASN1DERElement.hpp  img4tool.hpp  img4tool.hpp.in  libgeneral
